<resources>
    <string name="app_name">KnoxSandbox</string>

    <!-- Admin -->
    <string name="admin">Admin</string>
    <string name="admin_enabled">Admin enabled</string>
    <string name="admin_disabled">Admin disabled</string>
    <string name="admin_disable_failed">Admin disable failed</string>

    <!-- Owner -->
    <string name="owner">Device/Profile Owner</string>

    <!-- Work profile -->
    <string name="profile_provisioning_complete">Work profile provisioning complete</string>
    <string name="profile_provisioning_no_handler">Can\'t provision this device</string>

    <!-- Knox license -->
    <string name="license">Knox License</string>
    <string name="license_status">License %1$s: %2$s</string>
    <string name="license_activation">activation</string>
    <string name="license_validation">validation</string>
    <string name="license_deactivation">deactivation</string>
    <string name="license_progress">in progress</string>
    <string name="license_failed">failed</string>
    <string name="license_success">success</string>
    <string name="no_intent">No intent available</string>
    <string name="no_intent_action">No intent action available</string>
    <string name="invalid_intent_action">Invalid intent action</string>
    <string name="err_klm_internal">Internal error</string>
    <string name="err_klm_internal_server">Server internal error</string>
    <string name="err_klm_license_invalid_license">Invalid license</string>
    <string name="err_klm_invalid_package_name">Invalid package name</string>
    <string name="err_klm_license_terminated">License terminated</string>
    <string name="err_klm_network_disconnected">Network disconnected</string>
    <string name="err_klm_network_general">Network error</string>
    <string name="err_klm_not_current_date">Not current date</string>
    <string name="err_klm_null_params">Null params</string>
    <string name="err_klm_unknown">Unknown error</string>
    <string name="err_klm_user_disagrees_license_agreement">User rejected agreement</string>
    <string name="err_klm_code_unknown">Unknown error code %1$s, status %2$s</string>

    <!-- Knox container -->
    <string name="container_creation_progress">Container creation in progress</string>
    <string name="container_creation_success">Container created successfully</string>
    <string name="container_creation_error">Can\'t create container, error %1$d</string>

    <!-- Buttons -->
    <string name="activate_admin">Activate admin</string>
    <string name="deactivate_admin">Deactivate admin</string>
    <string name="activate_developer_license">Activate developer license</string>
    <string name="activate_premium_license">Activate premium license</string>
    <string name="activate_standard_license">Activate standard license</string>
    <string name="deactivate_license">Deactivate license</string>
    <string name="refresh_status">Refresh status</string>
    <string name="create_container">Create container</string>
    <string name="create_work_profile">Create work profile</string>
    <string name="toggle_container_camera">Toggle container camera (DPM API)</string>
    <string name="suspend_application">Suspend application</string>
    <string name="wipe_gmail_data">Wipe Gmail data</string>

    <!-- Actions -->
    <string name="data_wipe_success">Data successfully wiped for %1$s</string>
    <string name="data_wipe_failure">Failed to wipe data for %1$s</string>
    <string name="toggle_camera_success">Container camera state changed</string>
    <string name="toggle_camera_failure">Failed to change container camera state</string>

    <!-- Apps package names -->
    <string name="gmail_uid">"com.google.android.gm"</string>
    <string name="camera_app_uid">com.sec.android.app.camera</string>

    <!-- Dialogs -->
    <string name="knox_api_level_message">Knox API level is %1%d, minimum required %2$d</string>

</resources>
