<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/adminCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/admin"
            app:layout_constraintBottom_toTopOf="@id/licenseCaption"
            app:layout_constraintEnd_toStartOf="@id/middle_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/adminStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text=""
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@id/adminCaption"
            app:layout_constraintStart_toEndOf="@id/middle_guideline"
            tools:text="false" />

        <TextView
            android:id="@+id/licenseCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/license"
            app:layout_constraintBottom_toTopOf="@id/ownerCaption"
            app:layout_constraintEnd_toStartOf="@id/middle_guideline"
            app:layout_constraintTop_toBottomOf="@id/adminCaption" />

        <TextView
            android:id="@+id/licenseStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text=""
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@id/licenseCaption"
            app:layout_constraintStart_toEndOf="@id/middle_guideline"
            tools:text="false" />

        <TextView
            android:id="@+id/ownerCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/owner"
            app:layout_constraintBottom_toTopOf="@id/refreshStatusButton"
            app:layout_constraintEnd_toStartOf="@id/middle_guideline"
            app:layout_constraintTop_toBottomOf="@id/licenseCaption" />

        <TextView
            android:id="@+id/ownerStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text=""
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@id/ownerCaption"
            app:layout_constraintStart_toEndOf="@id/middle_guideline"
            tools:text="false" />

        <Button
            android:id="@+id/refreshStatusButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_big"
            android:text="@string/refresh_status"
            app:layout_constraintBottom_toTopOf="@id/activateAdminButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ownerCaption" />

        <Button
            android:id="@+id/activateAdminButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/activate_admin"
            app:layout_constraintBottom_toTopOf="@id/deactivateAdminButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/refreshStatusButton" />

        <Button
            android:id="@+id/deactivateAdminButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_big"
            android:text="@string/deactivate_admin"
            app:layout_constraintBottom_toTopOf="@id/activatePremiumLicenseButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activateAdminButton" />

        <Button
            android:id="@+id/activatePremiumLicenseButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/activate_premium_license"
            app:layout_constraintBottom_toTopOf="@id/activateStandardLicenseButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deactivateAdminButton" />

        <Button
            android:id="@+id/activateStandardLicenseButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/activate_standard_license"
            app:layout_constraintBottom_toTopOf="@id/deactivateLicenseButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activatePremiumLicenseButton" />

        <Button
            android:id="@+id/deactivateLicenseButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/deactivate_license"
            app:layout_constraintBottom_toTopOf="@id/createContainerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activateStandardLicenseButton" />

        <Button
            android:id="@+id/createContainerButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/create_container"
            app:layout_constraintBottom_toTopOf="@id/createWorkProfileButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deactivateLicenseButton" />

        <Button
            android:id="@+id/createWorkProfileButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_big"
            android:text="@string/create_work_profile"
            app:layout_constraintBottom_toTopOf="@id/toggleContainerCameraButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createContainerButton" />

        <Button
            android:id="@+id/toggleContainerCameraButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/toggle_container_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createWorkProfileButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>